[tool.poetry]
name = "cycling_waypoint"
version = "0.1.0"
description = "Tool to add waypoints to my Strava routes"
authors = ["Robert Barrimond <robert@barrimond.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
gpxpy = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
